--- a/rv2015/rv2015_main.tex
+++ b/rv2015/rv2015_main.tex
@@ -144,6 +144,9 @@ the testing of an ARV system. \monitor was able to detect violations of several 
 %\def\IEEEbibitemsep{0pt plus .5pt}
 \bibliographystyle{splncs03}
 % argument is your BibTeX string definitions and bibliography database(s)
+%\begin{small}
+\tiny
 \bibliography{./rv2015_bibtex,./MergedBib}
+%\end{small}
 
 \end{document}
