--- a/rv2015/sections/Architecture.tex
+++ b/rv2015/sections/Architecture.tex
@@ -6,7 +6,8 @@
 %% what are existing system architectures
 Many modern safety-critical embedded systems are designed as distributed systems to provide the ability to meet the necessary reliability, fault-tolerance, and redundancy. The individual system components are typically connected via a network bus, of which there are many different common types \cite{Rushby2001}. %Controller Area Network (CAN) is a common bus for ground vehicles, being standard on automobiles and widely used in other systems.
 %
-\paragraph{Controller Area Network} % add CAN citation?
+
+\textit{Controller Area Network.} % add CAN citation?
 Controller Area Network is a widely used automotive network developed by Bosch in the 1980s \cite{Bosch1991}. 
 In this work we focus primarily on monitoring CAN because it is a common automotive bus which typically conveys enough of the state we wish to observe without instrumentation.
 %
