--- a/rv2015/sections/Background.tex
+++ b/rv2015/sections/Background.tex
@@ -46,12 +46,16 @@ Our monitoring algorithm is similar to existing dynamic programming and formula-
 %	practical experience showing suitability of our language for safety monitoring
 %The primary novelty in our approach is the combination of eager and delayed checking for real-time monitoring, 
 Our main area of novelty is the combination of eager and conservative specification checking used in a practical setting showing the suitability of our bounded future logic for safety monitoring.
-\paragraph{Dynamic programming monitors}
+
+\textit{Dynamic programming monitors.}
 %% garg/precis
 Our monitoring algorithm is inspired by the algorithms \greduce\ \cite{Garg2011} and \precis\ \cite{Chowdhury2014}, adjusted for propositional logic and eager checking. 
 The structure of our algorithm is based on \greduce{}. 
-We utilize an iterative, formula-rewriting based algorithm, also named $\mathbf{reduce}$, but targeted at both offline log analysis as well as online real-time monitoring. 
-Both algorithms can return residual (i.e., incompletely reduced) formulas, but incompleteness in \greduce\ is due to incomplete logs which lead to unknown predicate substitutions, whereas our algorithm works on complete logs but must deal with temporal (i.e., future-time) incompleteness. 
+We utilize an iterative, formula-rewriting based algorithm, also named \monitor, but targeted at both offline log analysis as well as runtime monitoring. 
+Both \greduce and \precis can handle future incompleteness but \greduce also consider incompleteness for missing information which we do not consider. 
+\precis and \monitor both require the input trace to contain complete information.  
+
+%return residual (i.e., incompletely reduced) formulas, but incompleteness in \greduce\ is due to incomplete logs which lead to unknown predicate substitutions, whereas our algorithm works on complete logs but must deal with temporal (i.e., future-time) incompleteness. 
 
 %% dynamic prog algos -- thati/rosu, havelund, etc
 The NASA PathExplorer project has led to both a set of dynamic programming-based monitoring algorithms as well as some formula-rewriting based algorithms \cite{Havelund2004} for past-time LTL. These dynamic programming algorithms require checking the trace in reverse (from the end to the beginning) which makes them somewhat unsuitable for online monitoring \cite{Havelund2002}. The formula rewriting algorithms utilize the Maude term rewriting engine to efficiently monitor specifications through formula rewriting \cite{Rosu2005}. 
@@ -61,7 +65,7 @@ While they have a tight encoding of their canonical formulas, they still require
 %Their evaluation algorithm is similar to ours, but they require more storage space to handle formula rewriting with potentially growing formulas.
 
 
-\paragraph{Embedded Monitors}
+\textit{Embedded Monitors.}
 %% Hef/Rein
 Heffernan et. al. present a monitor for autonomotive systems using ISO 26262 as a guide to identify the monitored properties in \cite{Heffernan2014}. They monitor past-time linear temporal logic (LTL) formulas and obtain system state from target system buses (CAN in their example). Our semi-formal interface is similar to their ``filters'' used to translate system state to the atomic propositions that are monitored. Their motivation and goals are similar to ours, but they use on-chip system-on-a-chip based monitors which utilize instrumentation to obtain system state, which is not suitable for monitoring black-box systems.
 Reinbacher et. al. present an embedded past-time MTL monitor in \cite{Reinbacher2013} which generates FPGA-based non-invasive monitors. 
