--- a/rv2015/sections/Implementation.tex
+++ b/rv2015/sections/Implementation.tex
@@ -16,7 +16,7 @@ Because our specification language is bounded, we can avoid dynamic allocation i
 Recursion is also usually prohibited because it can be difficult to guarantee a maximum stack depth when using recursion. Although \monitor utilizes recursion extensively, we can implement \monitor using a traditional iterative traversal of the specification formulas instead.
 
 \subsection{Hybrid Algorithm}
-Our eager monitoring algorithm attempts to evaluate specification rules as soon as possible, but this requires checking trace properties which may not be fully reducable given the current trace. These unfinished formula reductions require extra computation time, and in practice the majority of the policy reductions performed by \monitor will be these eager reductions which may not fully reduce.
+Our eager monitoring algorithm attempts to evaluate specification rules as soon as possible, but this requires checking trace properties which may not be fully reducible given the current trace. These unfinished formula reductions require extra computation time, and in practice the majority of the policy reductions performed by \monitor will be these eager reductions which may not fully reduce.
 
 While early detection of violations can be useful, there are situations where eagerly checking an entire target specification may require more computation than is available from the monitor in a given period.
 
@@ -61,7 +61,7 @@ helps us show the feasibility of performing external bus monitoring on this clas
 %% paragraph 3 -- description of experiment 
 %%% some of this is in para1, we should go over: specification, logs, etc
 The logs contain both normal system operation as well as some operation under network-based robustness testing. During robustness testing, the testing framework can intercept targeted network messages on the bus and inject its own testing values. % could cite astaa here
-A PC was connected to a PCAN-USB Pro \cite{PCAN-USBPro} device which provides a USB interface to two CAN connections. One CAN channel was used as the log replayer, while the other was used as a bus logger for analysis purposes.
+A PC was connected to a PCAN-USB Pro \cite{PCAN-USBPro} device which provides a USB interface to two CAN connections. One CAN channel was used to replay the logs, while the other was used as a bus logger for analysis purposes.
 
 %% paragraph 4 -- specification
 Requirements documentation for this system was available, so we were able to build a monitoring specification based on actual system requirements.
@@ -72,7 +72,7 @@ The specification evaluated in the embedded monitor on the test logs are shown i
 \begin{table}[t]
 %\begin{tabular}{|p{3in}|l|}
 \begin{tabular}{|l|p{4.5in}|}
-\hline \multirow{2}{*}{Rule \#} & Informal Rule \\ & BMTL \\
+\hline \multirow{2}{*}{Rule \#} & Informal Rule \\ & MTL \\
 \hline \multirow{2}{*}{0} & A feature heartbeat will be sent within every 500ms \\
 & $\pred{HeartbeatOn} \rightarrow \LTLdiamond_{[0,500ms]} \pred{HeartBeat}$ \\
 \hline \multirow{2}{*}{1} & The interface component heartbeat counter is correct \\
