Added definition of reduce for until

--- a/rv2015/rv2015_main.tex
+++ b/rv2015/rv2015_main.tex
@@ -54,7 +54,7 @@
 \newcommand{\rp}[2]{\ensuremath{\langle #1, #2 \rangle}}
 \newcommand{\res}[2]{\ensuremath{r_{#1}^{#2}}}
 \newcommand{\agmon}{\ensuremath{\mathbf{agmon}}}
-\newcommand{\precis}{\textit{pr\`ecis}}
+\newcommand{\precis}{\textit{pr\`ecis}\xspace}
 \newcommand{\pst}{\ensuremath{S^i_\psi}}
 \newcommand{\rpt}[3]{\ensuremath{\langle #1, #2 \rangle}_{#3}}
 \newcommand{\greduce}{\textit{reduce}}
