--- a/rv2015/sections/Architecture.tex
+++ b/rv2015/sections/Architecture.tex
@@ -31,6 +31,7 @@ For example, safety-critical buses in star configurations which don't have a sin
 %For example, systems without a broadcast bus may be monitored by exposing the desired system state to the monitor (either through instrumentation or intelligent monitor placement such as network gateways/routers).
 
 \begin{figure}[!h]
+\centering 
 %\includegraphics[width=4.5in]{img/newArch}
 \includegraphics[scale=0.5]{img/ARV-main.pdf}
 \caption{External monitor architecture outline \label{fig:architecture}}
